--- a/bg-hoard/apps/store/project.json
+++ b/bg-hoard/apps/store/project.json
@@ -65,7 +65,7 @@
       },
       "defaultConfiguration": "development",
       "options": {
-        "proxyConfig": "undefined/proxy.conf.json"
+        "proxyConfig": "apps/store/proxy.conf.json"
       }
     },
     "extract-i18n": {
