--- a/bg-hoard/libs/store/header/project.json
+++ b/bg-hoard/libs/store/header/project.json
@@ -20,6 +20,35 @@
           "libs/store/header/**/*.html"
         ]
       }
+    },
+    "storybook": {
+      "executor": "@storybook/angular:start-storybook",
+      "options": {
+        "port": 4400,
+        "configDir": "libs/store/header/.storybook",
+        "browserTarget": "store-header:build-storybook",
+        "compodoc": false
+      },
+      "configurations": {
+        "ci": {
+          "quiet": true
+        }
+      }
+    },
+    "build-storybook": {
+      "executor": "@storybook/angular:build-storybook",
+      "outputs": ["{options.outputDir}"],
+      "options": {
+        "outputDir": "dist/storybook/store-header",
+        "configDir": "libs/store/header/.storybook",
+        "browserTarget": "store-header:build-storybook",
+        "compodoc": false
+      },
+      "configurations": {
+        "ci": {
+          "quiet": true
+        }
+      }
     }
   },
   "tags": []
