--- a/bg-hoard/.eslintrc.json
+++ b/bg-hoard/.eslintrc.json
@@ -13,8 +13,16 @@
             "allow": [],
             "depConstraints": [
               {
-                "sourceTag": "*",
-                "onlyDependOnLibsWithTags": ["*"]
+                "sourceTag": "scope:store",
+                "onlyDependOnLibsWithTags": ["scope:store-shared", "scope:shared-api"]
+              },
+              {
+                "sourceTag": "scope:api",
+                "onlyDependOnLibsWithTags": ["scope:shared-api"]
+              },
+              {
+                "sourceTag": "scope:store-shared",
+                "onlyDependOnLibsWithTags": ["scope:shared-api", "scope:store-shared"]
               }
             ]
           }
