--- a/bg-hoard/package.json
+++ b/bg-hoard/package.json
@@ -41,6 +41,7 @@
     "@nestjs/testing": "^8.0.0",
     "@nrwl/cli": "14.7.13",
     "@nrwl/cypress": "14.7.13",
+    "@nrwl/devkit": "14.7.13",
     "@nrwl/eslint-plugin-nx": "14.7.13",
     "@nrwl/jest": "14.7.13",
     "@nrwl/linter": "14.7.13",
@@ -48,6 +49,7 @@
     "@nrwl/node": "13.2.3",
     "@nrwl/nx-cloud": "latest",
     "@nrwl/nx-workshop": "^0.0.1",
+    "@nrwl/storybook": "^14.7.13",
     "@nrwl/workspace": "14.7.13",
     "@storybook/addon-essentials": "~6.5.9",
     "@storybook/angular": "~6.5.9",
@@ -70,7 +72,6 @@
     "ts-jest": "28.0.5",
     "ts-node": "10.9.1",
     "typescript": "~4.8.2",
-    "webpack": "^5.64.0",
-    "@nrwl/storybook": "^14.7.13"
+    "webpack": "^5.64.0"
   }
 }
